test/pending/neg/t0625.check
<insert expected error message, current one is the following>

t0625.scala:3: error: inferred the kinds of the type arguments (Option[B],Int) do not conform to the expected kinds of the type parameters (type C,type T).
Option[B]'s type parameters do not match type C's expected parameters: class Option has one type parameter, but type C has one
  idMap(Some(0))
  ^
one error found
